Fix spacing issue for course details on cards

--- a/web/themes/custom/union_marketing/scss/global/_union-variables.scss
+++ b/web/themes/custom/union_marketing/scss/global/_union-variables.scss
@@ -68,3 +68,7 @@
 .cu-component--people-listing.cu-list--grid-compact {
   --cu-grid-row-gap: var(--cu-vr1);
 }
+
+.cu-card__content .cu-feature-list {
+  --cu-grid-row-gap: 0;
+}
